Fixed too small z-index for resize handles #8

--- a/resizablecsslayout/src/main/resources/VAADIN/addons/resizablecsslayout/resizablecsslayout.scss
+++ b/resizablecsslayout/src/main/resources/VAADIN/addons/resizablecsslayout/resizablecsslayout.scss
@@ -26,7 +26,7 @@
       top: 0;
       left: 0;
       right: 0;
-      z-index: 2;
+      z-index: 6;
       .tlc {
         cursor: nwse-resize;
         top: 0;
@@ -45,21 +45,21 @@
       top: 0;
       right: 0;
       bottom: 0;
-      z-index: 1;
+      z-index: 5;
     }
     .ls {
       cursor: ew-resize;
       top: 0;
       bottom: 0;
       left: 0;
-      z-index: 1;
+      z-index: 5;
     }
     .bs {
       cursor: ns-resize;
       right: 0;
       bottom: 0;
       left: 0;
-      z-index: 2;
+      z-index: 6;
       .blc {
         cursor: nesw-resize;
         bottom: 0;
